add constant helpers

--- a/pkg/codegen/templates/constants.tmpl
+++ b/pkg/codegen/templates/constants.tmpl
@@ -9,9 +9,24 @@ const (
 {{range $Enum := .EnumDefinitions}}
 // Defines values for {{$Enum.TypeName}}.
 const (
-{{range $index, $value := $Enum.Schema.EnumValues}}
+{{- range $index, $value := $Enum.Schema.EnumValues}}
   {{$index}} {{$Enum.TypeName}} = {{$Enum.ValueWrapper}}{{$value}}{{$Enum.ValueWrapper}}
-{{end}}
+{{- end}}
 )
+
+var {{$Enum.TypeName}}List = []{{$Enum.TypeName}}{
+{{- range $index, $value := $Enum.Schema.EnumValues}}
+  {{$index}},
+{{- end}}
+}
+
+func IsValid{{$Enum.TypeName}}(thing {{$Enum.TypeName}}) bool {
+for _, c := range {{$Enum.TypeName}}List {
+if thing == c {
+return true
+}
+}
+return false
+}
 {{end}}
 {{end}}
