add valid helper for string type constants

--- a/pkg/codegen/templates/constants.tmpl
+++ b/pkg/codegen/templates/constants.tmpl
@@ -20,6 +20,16 @@ var {{$Enum.TypeName}}List = []{{$Enum.TypeName}}{
 {{- end}}
 }
 
+{{ if eq $Enum.Schema.GoType "string" }}
+func IsValid{{$Enum.TypeName}}(thing {{$Enum.TypeName}}) bool {
+for _, c := range {{$Enum.TypeName}}List {
+if strings.EqualFold(string(thing), string(c)) {
+return true
+}
+}
+return false
+}
+{{ else }}
 func IsValid{{$Enum.TypeName}}(thing {{$Enum.TypeName}}) bool {
 for _, c := range {{$Enum.TypeName}}List {
 if thing == c {
@@ -28,5 +38,7 @@ return true
 }
 return false
 }
+{{end}}
+
 {{end}}
 {{end}}
